--- a/index.html
+++ b/index.html
@@ -15,17 +15,11 @@
     <!-- Bootstrap v5 CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
 
-    <!-- Custom fonts for this template -->
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700;800;900&display=swap"
-        rel="stylesheet">
-    <script src="https://kit.fontawesome.com/c203d858ce.js" crossorigin="anonymous"></script>
+    <!-- Custom fonts for this template: using system fonts only (removed Google Fonts and icon fonts) -->
     <link href="img/favicon.ico" rel="icon" type="image/x-icon">
 
     <!-- Custom styles for this template -->
     <link href="css/resume.min.css?v=20250808" rel="stylesheet">
-    <link href="css/academicons.css" rel="stylesheet" />
 
 </head>
 
@@ -122,24 +116,27 @@
 
                             <ul class="list-social-icons mb-0">
                                 <li>
-                                    <a href="mailto:d.dinucci@ieee.org" title="Email">
-                                        <i class="fas fa-envelope"></i>
+                                    <a href="mailto:d.dinucci@ieee.org" title="Email" aria-label="Email">
+                                        <svg class="icon" viewBox="0 0 24 24" width="20" height="20" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" aria-hidden="true" focusable="false">
+                                            <rect x="3" y="5" width="18" height="14" rx="2" ry="2"></rect>
+                                            <polyline points="3,7 12,13 21,7"></polyline>
+                                        </svg>
                                     </a>
                                 </li>
                                 <li>
-                                    <a href="http://it.linkedin.com/pub/dario-di-nucci/44/926/654/en" target="_blank" rel="noopener noreferrer" title="LinkedIn">
-                                        <i class="fab fa-linkedin"></i>
+                                    <a href="http://it.linkedin.com/pub/dario-di-nucci/44/926/654/en" target="_blank" rel="noopener noreferrer" title="LinkedIn" aria-label="LinkedIn">
+                                        <span class="icon-text" aria-hidden="true">in</span>
                                     </a>
                                 </li>
                                 <li>
                                     <a href="https://scholar.google.it/citations?user=YJqcbnIAAAAJ"
-                                        target="_blank" rel="noopener noreferrer" title="Google Scholar">
-                                        <i class="ai ai-google-scholar"></i>
+                                        target="_blank" rel="noopener noreferrer" title="Google Scholar" aria-label="Google Scholar">
+                                        <span class="icon-text" aria-hidden="true">GS</span>
                                     </a>
                                 </li>
                                 <li>
-                                    <a href="https://github.com/dardin88" target="_blank" rel="noopener noreferrer" title="GitHub">
-                                        <i class="fab fa-github"></i>
+                                    <a href="https://github.com/dardin88" target="_blank" rel="noopener noreferrer" title="GitHub" aria-label="GitHub">
+                                        <span class="icon-text" aria-hidden="true">GH</span>
                                     </a>
                                 </li>
                             </ul>
