--- a/projects.html
+++ b/projects.html
@@ -15,17 +15,11 @@
     <!-- Bootstrap v5 CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
 
-    <!-- Custom fonts for this template -->
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700;800;900&display=swap"
-        rel="stylesheet">
-    <script src="https://kit.fontawesome.com/c203d858ce.js" crossorigin="anonymous"></script>
+    <!-- Custom fonts for this template: using system fonts only (removed Google Fonts and icon fonts) -->
     <link href="img/favicon.ico" rel="icon" type="image/x-icon">
 
     <!-- Custom styles for this template -->
     <link href="css/resume.min.css?v=20250808" rel="stylesheet">
-    <link href="css/academicons.css" rel="stylesheet" />
 
 </head>
 
@@ -89,9 +83,7 @@
                         <div class="modern-card h-100">
                             <div class="d-flex align-items-center justify-content-between mb-3">
                                 <h4 class="card-title mb-0">RECHARGE</h4>
-                                <a href="https://recharge-project.github.io" target="_blank" class="btn-modern btn-sm">
-                                    <i class="fas fa-external-link-alt me-1"></i> Visit
-                                </a>
+                                <a href="https://recharge-project.github.io" target="_blank" class="btn-modern btn-sm">Visit</a>
                             </div>
                             <div class="mb-3">
                                 <span class="badge bg-primary me-2">MIUR - PRIN 2022 PNRR</span>
@@ -110,10 +102,7 @@
                         <div class="modern-card h-100">
                             <div class="d-flex align-items-center justify-content-between mb-3">
                                 <h4 class="card-title mb-0">SMARTITUDE</h4>
-                                <a href="https://smartitude-project.github.io" target="_blank"
-                                    class="btn-modern btn-sm">
-                                    <i class="fas fa-external-link-alt me-1"></i> Visit
-                                </a>
+                                <a href="https://smartitude-project.github.io" target="_blank" class="btn-modern btn-sm">Visit</a>
                             </div>
                             <div class="mb-3">
                                 <span class="badge bg-primary me-2">MIUR - PRIN 2022</span>
@@ -140,9 +129,7 @@
                         <div class="modern-card h-100">
                             <div class="d-flex align-items-center justify-content-between mb-3">
                                 <h4 class="card-title mb-0">RADON H2020</h4>
-                                <a href="http://radon-h2020.eu/" target="_blank" class="btn-modern btn-sm">
-                                    <i class="fas fa-external-link-alt me-1"></i> Visit
-                                </a>
+                                <a href="http://radon-h2020.eu/" target="_blank" class="btn-modern btn-sm">Visit</a>
                             </div>
                             <div class="mb-3">
                                 <span class="badge bg-primary me-2">EU Horizon 2020</span>
@@ -161,9 +148,7 @@
                         <div class="modern-card h-100">
                             <div class="d-flex align-items-center justify-content-between mb-3">
                                 <h4 class="card-title mb-0">SECO-ASSIST</h4>
-                                <a href="https://secoassist.github.io/" target="_blank" class="btn-modern btn-sm">
-                                    <i class="fas fa-external-link-alt me-1"></i> Visit
-                                </a>
+                                <a href="https://secoassist.github.io/" target="_blank" class="btn-modern btn-sm">Visit</a>
                             </div>
                             <div class="mb-3">
                                 <span class="badge bg-primary me-2">FRS-FNRS & FWO</span>
@@ -183,9 +168,7 @@
                         <div class="modern-card h-100">
                             <div class="d-flex align-items-center justify-content-between mb-3">
                                 <h4 class="card-title mb-0">INTIMALS</h4>
-                                <a href="https://soft.vub.ac.be/intimals/" target="_blank" class="btn-modern btn-sm">
-                                    <i class="fas fa-external-link-alt me-1"></i> Visit
-                                </a>
+                                <a href="https://soft.vub.ac.be/intimals/" target="_blank" class="btn-modern btn-sm">Visit</a>
                             </div>
                             <div class="mb-3">
                                 <span class="badge bg-primary me-2">Innoviris</span>
@@ -214,10 +197,8 @@
                         <div class="modern-card h-100">
                             <div class="d-flex align-items-center justify-content-between mb-3">
                                 <h4 class="card-title mb-0">MuSe</h4>
-                                <a href="https://github.com/GerardoIuliano/MuSe" target="_blank"
-                                    class="btn-modern btn-sm">
-                                    <i class="fab fa-github me-1"></i> Source
-                                </a>
+                                    <a href="https://github.com/GerardoIuliano/MuSe" target="_blank"
+                                        class="btn-modern btn-sm">Source</a>
                             </div>
                             <div class="mb-3">
                                 <span class="badge bg-primary me-2">Mutation Testing</span>
@@ -239,13 +220,9 @@
                                 <h4 class="card-title mb-0">AMBER</h4>
                                 <div>
                                     <a href="https://github.com/AntonioTrovato/AMBER" target="_blank"
-                                        class="btn-modern btn-sm me-2">
-                                        <i class="fab fa-github me-1"></i> Source
-                                    </a>
+                                        class="btn-modern btn-sm me-2">Source</a>
                                     <a href="https://www.youtube.com/watch?v=7zOngDQ1z_k" target="_blank" rel="noopener noreferrer"
-                                        class="btn-modern btn-sm">
-                                        <i class="fas fa-play me-1"></i> Video
-                                    </a>
+                                        class="btn-modern btn-sm">Video</a>
                                 </div>
                             </div>
                             <div class="mb-3">
@@ -269,13 +246,9 @@
                                 <h4 class="card-title mb-0">Defuse</h4>
                                 <div>
                                     <a href="https://github.com/radon-h2020/radon-defuse/" target="_blank" rel="noopener noreferrer"
-                                        class="btn-modern btn-sm me-2">
-                                        <i class="fab fa-github me-1"></i> Source
-                                    </a>
+                                        class="btn-modern btn-sm me-2">Source</a>
                                     <a href="https://www.youtube.com/watch?v=37mmLdCX3jU" target="_blank" rel="noopener noreferrer"
-                                        class="btn-modern btn-sm">
-                                        <i class="fas fa-play me-1"></i> Video
-                                    </a>
+                                        class="btn-modern btn-sm">Video</a>
                                 </div>
                             </div>
                             <div class="mb-3">
@@ -298,13 +271,9 @@
                                 <h4 class="card-title mb-0">RepoMiner</h4>
                                 <div>
                                     <a href="https://github.com/radon-h2020/radon-repository-miner" target="_blank" rel="noopener noreferrer"
-                                        class="btn-modern btn-sm me-2">
-                                        <i class="fab fa-github me-1"></i> Source
-                                    </a>
+                                        class="btn-modern btn-sm me-2">Source</a>
                                     <a href="https://radon-h2020.github.io/radon-repository-miner/" target="_blank" rel="noopener noreferrer"
-                                        class="btn-modern btn-sm">
-                                        <i class="fas fa-book me-1"></i> Docs
-                                    </a>
+                                        class="btn-modern btn-sm">Docs</a>
                                 </div>
                             </div>
                             <div class="mb-3">
@@ -328,13 +297,9 @@
                                 <h4 class="card-title mb-0">AnsibleMetrics</h4>
                                 <div>
                                     <a href="https://github.com/radon-h2020/radon-ansible-metrics" target="_blank" rel="noopener noreferrer"
-                                        class="btn-modern btn-sm me-2">
-                                        <i class="fab fa-github me-1"></i> Source
-                                    </a>
+                                        class="btn-modern btn-sm me-2">Source</a>
                                     <a href="https://radon-h2020.github.io/radon-ansible-metrics" target="_blank" rel="noopener noreferrer"
-                                        class="btn-modern btn-sm">
-                                        <i class="fas fa-book me-1"></i> Docs
-                                    </a>
+                                        class="btn-modern btn-sm">Docs</a>
                                 </div>
                             </div>
                             <div class="mb-3">
@@ -355,9 +320,7 @@
                             <div class="d-flex align-items-center justify-content-between mb-3">
                                 <h4 class="card-title mb-0">SoCRATES</h4>
                                 <a href="https://github.com/jonas-db/socrates" target="_blank" rel="noopener noreferrer"
-                                    class="btn-modern btn-sm">
-                                    <i class="fab fa-github me-1"></i> Source
-                                </a>
+                                    class="btn-modern btn-sm">Source</a>
                             </div>
                             <div class="mb-3">
                                 <span class="badge bg-primary me-2">IntelliJ Plugin</span>
@@ -380,17 +343,11 @@
                                 <h4 class="card-title mb-0">aDoctor</h4>
                                 <div>
                                     <a href="https://plugins.jetbrains.com/plugin/13443-adoctor" target="_blank" rel="noopener noreferrer"
-                                        class="btn-modern btn-sm me-2">
-                                        <i class="fas fa-plug me-1"></i> Plugin
-                                    </a>
+                                        class="btn-modern btn-sm me-2">Plugin</a>
                                     <a href="https://github.com/emaiannone/aDoctor" target="_blank" rel="noopener noreferrer"
-                                        class="btn-modern btn-sm me-2">
-                                        <i class="fab fa-github me-1"></i> Source
-                                    </a>
+                                        class="btn-modern btn-sm me-2">Source</a>
                                     <a href="https://www.youtube.com/watch?v=1c2EhVXiKis" target="_blank" rel="noopener noreferrer"
-                                        class="btn-modern btn-sm">
-                                        <i class="fas fa-play me-1"></i> Video
-                                    </a>
+                                        class="btn-modern btn-sm">Video</a>
                                 </div>
                             </div>
                             <div class="mb-3">
@@ -412,13 +369,9 @@
                                 <h4 class="card-title mb-0">PETrA</h4>
                                 <div>
                                     <a href="https://github.com/dardin88/PETrA" target="_blank" rel="noopener noreferrer"
-                                        class="btn-modern btn-sm me-2">
-                                        <i class="fab fa-github me-1"></i> Source
-                                    </a>
+                                        class="btn-modern btn-sm me-2">Source</a>
                                     <a href="https://www.youtube.com/watch?v=1rrFPDMIBbI" target="_blank" rel="noopener noreferrer"
-                                        class="btn-modern btn-sm">
-                                        <i class="fas fa-play me-1"></i> Video
-                                    </a>
+                                        class="btn-modern btn-sm">Video</a>
                                 </div>
                             </div>
                             <div class="mb-3">
@@ -440,9 +393,7 @@
                         <div class="modern-card h-100">
                             <div class="d-flex align-items-center justify-content-between mb-3">
                                 <h4 class="card-title mb-0">Landfill</h4>
-                                <a href="https://zenodo.org/records/6080422" target="_blank" rel="noopener noreferrer" class="btn-modern btn-sm">
-                                    <i class="fas fa-database me-1"></i> Dataset
-                                </a>
+                                <a href="https://zenodo.org/records/6080422" target="_blank" rel="noopener noreferrer" class="btn-modern btn-sm">Dataset</a>
                             </div>
                             <div class="mb-3">
                                 <span class="badge bg-primary me-2">Research Dataset</span>
@@ -468,9 +419,7 @@
                         <div class="modern-card h-100">
                             <div class="d-flex align-items-center justify-content-between mb-3">
                                 <h4 class="card-title mb-0">GNOME Maps</h4>
-                                <a href="https://wiki.gnome.org/Apps/Maps" target="_blank" rel="noopener noreferrer" class="btn-modern btn-sm">
-                                    <i class="fas fa-external-link-alt me-1"></i> Project
-                                </a>
+                                <a href="https://wiki.gnome.org/Apps/Maps" target="_blank" rel="noopener noreferrer" class="btn-modern btn-sm">Project</a>
                             </div>
                             <div class="mb-3">
                                 <span class="badge bg-primary me-2">GNOME</span>
@@ -488,9 +437,7 @@
                         <div class="modern-card h-100">
                             <div class="d-flex align-items-center justify-content-between mb-3">
                                 <h4 class="card-title mb-0">GraphHopper</h4>
-                                <a href="https://graphhopper.com" target="_blank" rel="noopener noreferrer" class="btn-modern btn-sm">
-                                    <i class="fas fa-external-link-alt me-1"></i> Project
-                                </a>
+                                <a href="https://graphhopper.com" target="_blank" rel="noopener noreferrer" class="btn-modern btn-sm">Project</a>
                             </div>
                             <div class="mb-3">
                                 <span class="badge bg-primary me-2">Routing Engine</span>
