--- a/services.html
+++ b/services.html
@@ -15,17 +15,11 @@
     <!-- Bootstrap v5 CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
 
-    <!-- Custom fonts for this template -->
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700;800;900&display=swap"
-        rel="stylesheet">
-    <script src="https://kit.fontawesome.com/c203d858ce.js" crossorigin="anonymous"></script>
+    <!-- Custom fonts for this template: using system fonts only (removed Google Fonts and icon fonts) -->
     <link href="img/favicon.ico" rel="icon" type="image/x-icon">
 
     <!-- Custom styles for this template -->
     <link href="css/resume.min.css?v=20250808" rel="stylesheet">
-    <link href="css/academicons.css" rel="stylesheet" />
 
 </head>
 
