--- a/index.html
+++ b/index.html
@@ -124,19 +124,25 @@
                                     </a>
                                 </li>
                                 <li>
-                                    <a href="http://it.linkedin.com/pub/dario-di-nucci/44/926/654/en" target="_blank" rel="noopener noreferrer" title="LinkedIn" aria-label="LinkedIn">
-                                        <span class="icon-text" aria-hidden="true">in</span>
+                                    <a href="https://it.linkedin.com/pub/dario-di-nucci/44/926/654/en" target="_blank" rel="noopener noreferrer" title="LinkedIn" aria-label="LinkedIn">
+                                        <svg class="icon" viewBox="0 0 24 24" width="20" height="20" aria-hidden="true" focusable="false" xmlns="http://www.w3.org/2000/svg">
+                                            <path fill="currentColor" d="M20.447 20.452H17v-5.569c0-1.327-.027-3.045-1.854-3.045-1.854 0-2.137 1.447-2.137 2.943v5.671H9.455V9h3.291v1.561h.047c.458-.868 1.576-1.785 3.245-1.785 3.47 0 4.409 2.283 4.409 5.252v6.424zM5.337 7.433a2.062 2.062 0 110-4.124 2.062 2.062 0 010 4.124zM6.813 20.452H3.861V9h2.952v11.452z"/>
+                                        </svg>
                                     </a>
                                 </li>
                                 <li>
                                     <a href="https://scholar.google.it/citations?user=YJqcbnIAAAAJ"
                                         target="_blank" rel="noopener noreferrer" title="Google Scholar" aria-label="Google Scholar">
-                                        <span class="icon-text" aria-hidden="true">GS</span>
+                                        <svg class="icon" viewBox="0 0 24 24" width="20" height="20" aria-hidden="true" focusable="false" xmlns="http://www.w3.org/2000/svg">
+                                            <path fill="currentColor" d="M5.242 13.769L0 9.5 12 0l12 9.5-5.242 4.269C17.548 11.249 14.978 9.5 12 9.5c-2.977 0-5.548 1.748-6.758 4.269zM12 10a7 7 0 1 0 0 14 7 7 0 0 0 0-14z"/>
+                                        </svg>
                                     </a>
                                 </li>
                                 <li>
                                     <a href="https://github.com/dardin88" target="_blank" rel="noopener noreferrer" title="GitHub" aria-label="GitHub">
-                                        <span class="icon-text" aria-hidden="true">GH</span>
+                                        <svg class="icon" viewBox="0 0 24 24" width="20" height="20" aria-hidden="true" focusable="false" xmlns="http://www.w3.org/2000/svg">
+                                            <path fill="currentColor" d="M12 .296a12 12 0 00-3.79 23.39c.6.11.82-.26.82-.58 0-.29-.01-1.05-.02-2.06-3.34.73-4.04-1.61-4.04-1.61-.55-1.4-1.34-1.77-1.34-1.77-1.09-.75.08-.74.08-.74 1.2.08 1.83 1.23 1.83 1.23 1.07 1.84 2.8 1.31 3.48 1 .11-.78.42-1.31.76-1.61-2.67-.3-5.47-1.34-5.47-5.95 0-1.32.47-2.39 1.23-3.24-.12-.3-.54-1.52.12-3.17 0 0 1.01-.32 3.3 1.23a11.5 11.5 0 016 0c2.28-1.55 3.3-1.23 3.3-1.23.66 1.65.24 2.87.12 3.17.76.85 1.23 1.92 1.23 3.24 0 4.62-2.8 5.65-5.48 5.95.43.37.82 1.1.82 2.22 0 1.6-.01 2.88-.01 3.27 0 .32.22.69.83.57A12 12 0 0012 .296z"/>
+                                        </svg>
                                     </a>
                                 </li>
                             </ul>
