--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@
 
                             <div class="contact-info mb-4">
                                 <a href="https://www.unisa.it/" target="_blank" rel="noopener noreferrer" class="d-block mb-3">
-                                    <img id="unisa-logo" src="img/unisa.jpg" alt="University of Salerno" loading="lazy" width="120" height="120" />
+                                    <img id="unisa-logo" src="img/unisa.png" alt="University of Salerno" loading="lazy" width="120" height="120" />
                                 </a>
                                 <h4 class="gradient-text mb-3">Università degli Studi di Salerno</h4>
                                 <p class="text-muted mb-3">
